<resources>
    <string name="app_name">Project1_SplitTheBill</string>
    <string name="bill_amount">Bill Amount?</string>
    <string name="textview_number_of_people">Number of people?</string>
    <string name="textview_Quality_of_service">Quality of Service</string>
    <string name="radiobutton_Excellent">Excellent</string>
    <string name="radiobutton_Average">Average</string>
    <string name="radiobutton_Poor">Poor</string>
    <string name="calculate">CALCULATE</string>
    <string name="textview_Amount_Per_Person">Amount Per Person</string>
    <string name="textviewBill">Bill</string>
    <string name="textviewTip">Tip</string>
    <string name="textviewTotal">Total</string>
    <string name="textview_InputMoney">Enter amount of money</string>
    <string name="textview_InputPeople">How many people for the bill?</string>
    <string name="textview_howmanytip">How many percent for the tip?</string>
    <string name="nextButton">Next</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numDot">.</string>
    <string name="dollar_sign">$</string>
    <string name="num_del">del</string>
    <string name="radio_good">10%\nThe food was good!"</string>
    <string name="radio_poor">5%\nWhat a poor quality!</string>
    <string name="radio_excellent">15%\nExcellent!</string>
    <string name="doneButton">Done</string>
    <string name="Bill">Bill</string>
    <string name="Each">Each</string>
    <string name="Total">Total</string>
    <string name="Tip">Tip</string>
</resources>
