<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/CalculateScreen"

    android:background="@color/background_color"
    tools:context=".CalculateHomeActivity">


    <TextView
        android:id="@+id/textView_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/bill_amount"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_bill_amount" />

    <TextView
        android:id="@+id/text_Number_of_people"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"

        android:text="@string/textview_number_of_people"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_Number_of_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_bill_amount" />

    <EditText
        android:id="@+id/editText_Number_of_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Number_of_people" />

    <TextView
        android:id="@+id/textView_Quality_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_Quality_of_service"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Number_of_people" />

    <RadioGroup
        android:id="@+id/radioQoS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Quality_of_service">

        <RadioButton
            android:id="@+id/radio_Excellent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/radiobutton_Excellent"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView_Quality_of_service"
            app:layout_constraintTop_toBottomOf="@+id/textView_Quality_of_service" />

        <RadioButton
            android:id="@+id/radio_Average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/radiobutton_Average"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Quality_of_service" />

        <RadioButton
            android:id="@+id/radio_Poor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:text="@string/radiobutton_Poor"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Quality_of_service" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:onClick="Calculate"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioQoS" />

    <TextView
        android:id="@+id/textView_Amount_Per_Person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_Amount_Per_Person"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView_Bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/textviewBill"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Amount_Per_Person" />

    <TextView
        android:id="@+id/textView_Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewTip"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Tip_result"
        app:layout_constraintStart_toStartOf="@+id/textView_Bill" />

    <TextView
        android:id="@+id/textView_Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/textviewTotal"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Total_result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Bill_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="textView_Bill_result"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Bill"
        app:layout_constraintEnd_toEndOf="@+id/textView_Amount_Per_Person" />

    <TextView
        android:id="@+id/textView_Tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="textView_Tip_result"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Bill_result"
        app:layout_constraintTop_toBottomOf="@+id/textView_Bill_result" />

    <TextView
        android:id="@+id/textView_Total_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="textView_Total_result"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Tip_result"
        app:layout_constraintTop_toBottomOf="@+id/textView_Tip_result" />


</androidx.constraintlayout.widget.ConstraintLayout>