<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".InputAmountTip">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="419dp"
        android:layout_height="190dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2_percenttip"
            android:layout_width="333dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/textview_howmanytip"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="465dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13">

            <RadioButton
                android:id="@+id/radio_buttExcellent"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:onClick="excellent"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_excellent"
                android:textColor="@color/radio_flat_text_selector"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radio_buttAverage"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_marginBottom="20dp"
                android:onClick="good"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_good"
                android:textColor="@color/radio_flat_text_selector"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radio_buttPoor"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:onClick="poorSound"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:text="@string/radio_poor"
                android:textColor="@color/radio_flat_text_selector"
                android:textSize="25sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/NextToCalculate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="99dp"
        android:layout_height="73dp"
        android:background="@color/background_color"
        android:fontFamily="@font/montserrat_semibold"
        android:onClick="NextButtonClicked"
        android:text="@string/doneButton"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>