<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ExtractFinalBill">

    <TextView
        android:id="@+id/textView_Bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="71dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Bill"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_Amount_Per_Person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_Amount"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Amount_Per_Person"
        app:layout_constraintEnd_toStartOf="@+id/textView_Amount_Per_Person"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_Amount_Per_Person"
        app:srcCompat="@drawable/person" />

    <TextView
        android:id="@+id/textView_Amount_Per_Person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Each"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_Tip"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_Tip"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Tip"
        app:layout_constraintEnd_toStartOf="@+id/textView_Tip"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_Tip"
        app:srcCompat="@drawable/tip" />

    <TextView
        android:id="@+id/textView_Tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Tip"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Total"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/total" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/Total"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Tip" />

    <TextView
        android:id="@+id/textView_Amount_Per_Person_result"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:text="$5"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Amount_Per_Person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_Amount_Per_Person"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_Tip_result"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_Tip"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="353dp"
        android:layout_height="4dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="67dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_Tip" />

    <TextView
        android:id="@+id/textView_Total_result"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="right"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>